# Project_poetry

./: .coverage  pyproject.toml
code_file/: get_val.py  set_.py
project_poetry/: file.py
tests/: .coverage  test_get.py  test_get_val.py  test_index_of.py  test_set_.py  test_slice.py
